<resources>
    <string name="app_name" translatable="false">TrackMyPower</string>

    <string name="workout_position">Year %1$d - Month %2$d - Week %3$d - Day %4$d</string>
    <string name="workout_add_exercise">Add exercise</string>

    <string name="workout_stats_title">Edit Stats</string>
    <string name="workout_stats_date">Date</string>
    <string name="workout_stats_date_hint">1 Jan, 2025</string>
    <string name="workout_stats_year">Year</string>
    <string name="workout_stats_year_hint">year</string>
    <string name="workout_stats_month">Month</string>
    <string name="workout_stats_month_hint">month</string>
    <string name="workout_stats_week">Week</string>
    <string name="workout_stats_week_hint">week</string>
    <string name="workout_stats_day">Day</string>
    <string name="workout_stats_day_hint">day</string>
    <string name="workout_stats_start_time">Start Time</string>
    <string name="workout_stats_start_time_hint" translatable="false">00:00</string>
    <string name="workout_stats_end_time">End Time</string>
    <string name="workout_stats_end_time_hint" translatable="false">00:00</string>
    <string name="workout_stats_edit_stats">Edit</string>
    <string name="done_button">Done</string>

    <string name="back_button">Back</string>

    <string name="workout_stats_err_date_future">New date can\'t be in the future</string>
    <string name="workout_stats_err_year">New year</string>
    <string name="workout_stats_err_year_range">New year can\'t be less than 1</string>
    <string name="workout_stats_err_month">New month</string>
    <string name="workout_stats_err_month_range">New month must be between 1 and 12</string>
    <string name="workout_stats_err_week">New week</string>
    <string name="workout_stats_err_week_range">New week must be between 1 and 4</string>
    <string name="workout_stats_err_day">New day</string>
    <string name="workout_stats_err_day_range">New day must be between 1 and 7</string>
    <string name="workout_stats_err_null">can\'t be null</string>
    <string name="workset_set">Set %1$d</string>
    <string name="workout_stats_err">Failed to update workout!</string>
    <string name="workout_time" translatable="false">%1$s - %2$s (%3$s)</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_workout">Workout</string>
</resources>